Add POST_NOTIFICATIONS permission for Android 13+ and update BLE notification icon

--- a/composeApp/src/androidMain/AndroidManifest.xml
+++ b/composeApp/src/androidMain/AndroidManifest.xml
@@ -20,6 +20,9 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CONNECTED_DEVICE" />
 
+    <!-- Required on Android 13+ (API 33+) to show ANY notification -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <!-- Keep CPU alive for BLE connection in background -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
